Add Example ascan/pscan rules (Migrated from ext repo)
Signed-off-by: kingthorin <kingthorin@users.noreply.github.com>

--- a/src/main/resources/com/github/youruser/zap/javaexample/resources/Messages.properties
+++ b/src/main/resources/com/github/youruser/zap/javaexample/resources/Messages.properties
@@ -1,8 +1,19 @@
+javaexample.active.examplefile.desc = Add more information about the vulnerability here.
+javaexample.active.examplefile.name = An example active scan rule which loads data from a file
+javaexample.active.examplefile.other = This is for information that doesnt fit in any of the other sections.
+javaexample.active.examplefile.refs = https://www.zaproxy.org/blog/2014-04-30-hacking-zap-4-active-scan-rules/
+javaexample.active.examplefile.soln = A general description of how to solve the problem.
+javaexample.active.examplesimple.name = Example Active Scan Rule: Denial of Service
 javaexample.api.action.helloWorld = Logs "hello world called" with debug level.
 javaexample.desc = A Template Java Add-on
 javaexample.error.nofile = File not found : {0}
 javaexample.panel.msg = <html>This is a simple example of a status panel</html>
 javaexample.panel.title = Java Example
+javaexample.passive.examplefile.desc = Add more information about the vulnerability here.
+javaexample.passive.examplefile.name = An example passive scan rule which loads data from a file.
+javaexample.passive.examplefile.other = This is for information that doesn't fit in any of the other sections.
+javaexample.passive.examplefile.refs = https://www.zaproxy.org/blog/2014-04-03-hacking-zap-3-passive-scan-rules/
+javaexample.passive.examplefile.soln = A general description of how to solve the problem.
 javaexample.popup.msg = Example right click menu invoked for:\n {0}
 javaexample.popup.title = Java Example: Example right click menu
 javaexample.topmenu.tools.msg = Java Example: Example message
