--- a/src/main/resources/org/zaproxy/zap/extension/aitrafficanalyst/resources/Messages.properties
+++ b/src/main/resources/org/zaproxy/zap/extension/aitrafficanalyst/resources/Messages.properties
@@ -1,18 +1,19 @@
-aitrafficanalyst.name=AI Traffic Analyst
-aitrafficanalyst.desc=AI-driven traffic analysis using local LLMs.
-aitrafficanalyst.menu.analyze=AI Analyst: Analyze Request
-aitrafficanalyst.panel.name=AI Analysis
-aitrafficanalyst.btn.clear=Clear All
-aitrafficanalyst.btn.save=Save Report
-aitrafficanalyst.options.ollamaUrl=Ollama Base URL:
-aitrafficanalyst.options.ollamaUrl.tooltip=e.g. http://localhost:11434/
-aitrafficanalyst.options.modelName=Model Name:
-aitrafficanalyst.options.refresh=Refresh Models
-aitrafficanalyst.options.systemPrompt=System Prompt:
-aitrafficanalyst.options.reset=Reset to Defaults
-aitrafficanalyst.options.modelsLoaded=Models loaded successfully!
-aitrafficanalyst.status.thinking=Thinking...
-aitrafficanalyst.status.sending=\uD83D\uDCE1 Sending live request to capture fresh response...
-aitrafficanalyst.status.querying=\uD83E\uDD16 Thinking... (Querying {0} with live data)...
-aitrafficanalyst.status.thinking_with_model=Thinking... (Querying {0})...
-aitrafficanalyst.warn.promptTruncated=\u26A0 Prompt truncated to {0} bytes before sending to model.
+aitrafficanalyst.btn.clear = Clear All
+aitrafficanalyst.btn.save = Save Report
+aitrafficanalyst.desc = AI-driven traffic analysis using local LLMs.
+aitrafficanalyst.menu.aiAnalyst = AI Analyst
+aitrafficanalyst.menu.analyze = Analyze Request
+aitrafficanalyst.name = AI Traffic Analyst
+aitrafficanalyst.options.modelName = Model Name:
+aitrafficanalyst.options.modelsLoaded = Models loaded successfully!
+aitrafficanalyst.options.ollamaUrl = Ollama Base URL:
+aitrafficanalyst.options.ollamaUrl.tooltip = e.g. http://localhost:11434/
+aitrafficanalyst.options.refresh = Refresh Models
+aitrafficanalyst.options.reset = Reset to Defaults
+aitrafficanalyst.options.systemPrompt = System Prompt:
+aitrafficanalyst.panel.name = AI Analysis
+aitrafficanalyst.status.querying = 🤖 Thinking... (Querying {0} with live data)...
+aitrafficanalyst.status.sending = 📡 Sending live request to capture fresh response...
+aitrafficanalyst.status.thinking = Thinking...
+aitrafficanalyst.status.thinking_with_model = Thinking... (Querying {0})...
+aitrafficanalyst.warn.promptTruncated = ⚠ Prompt truncated to {0} bytes before sending to model.
