feat(options): add personas + persist active role
- Replace single system prompt with role-based personas and active role selection

- Add default personas (Standard, Red Team, False Positive Hunter, API Logic Expert)

- Persist active role in config and restore on restart (with legacy key fallback)

- Update analysis to use the active role prompt

- Refresh Options UI for role management; add i18n strings

- Bump add-on version to 1.1.0

--- a/src/main/resources/org/zaproxy/zap/extension/aitrafficanalyst/resources/Messages.properties
+++ b/src/main/resources/org/zaproxy/zap/extension/aitrafficanalyst/resources/Messages.properties
@@ -3,6 +3,8 @@ aitrafficanalyst.btn.save = Save Report
 aitrafficanalyst.desc = AI-driven traffic analysis using local LLMs.
 aitrafficanalyst.menu.aiAnalyst = AI Analyst
 aitrafficanalyst.menu.analyze = Analyze Request
+aitrafficanalyst.menu.analyzeGet = Analyze GET
+aitrafficanalyst.menu.analyzePost = Analyze POST
 aitrafficanalyst.name = AI Traffic Analyst
 aitrafficanalyst.options.modelName = Model Name:
 aitrafficanalyst.options.modelsLoaded = Models loaded successfully!
@@ -10,6 +12,15 @@ aitrafficanalyst.options.ollamaUrl = Ollama Base URL:
 aitrafficanalyst.options.ollamaUrl.tooltip = e.g. http://localhost:11434/
 aitrafficanalyst.options.refresh = Refresh Models
 aitrafficanalyst.options.reset = Reset to Defaults
+aitrafficanalyst.options.role = Role:
+aitrafficanalyst.options.role.add = Add Role
+aitrafficanalyst.options.role.add.duplicate = That role already exists.
+aitrafficanalyst.options.role.add.prompt = Enter a role name:
+aitrafficanalyst.options.role.add.title = Add Role
+aitrafficanalyst.options.role.delete = Delete Role
+aitrafficanalyst.options.role.delete.confirm = Delete this role? This cannot be undone.
+aitrafficanalyst.options.role.delete.title = Delete Role
+aitrafficanalyst.options.role.prompt = Role Prompt:
 aitrafficanalyst.options.systemPrompt = System Prompt:
 aitrafficanalyst.panel.name = AI Analysis
 aitrafficanalyst.status.querying = 🤖 Thinking... (Querying {0} with live data)...
