Switch to ZAP LLM add-on integration (v1.2.0)
Why: migrate from the legacy Ollama-only workflow to the official ZAP LLM add-on so users configure providers in one place and the add-on can rely on ZAP-managed comms.

What: introduce an internal LLM client adapter (AnalystLlmClient) backed by LlmAddonClient; refactor analysis flows to use it and surface clear 'not configured' guidance; remove Ollama client + related settings/UI.

Release: bump to 1.2.0, update manifest metadata and declare dependency on the 'llm' add-on; refresh README/CHANGELOG and add upstream LLM notes.

Test: manual verification in ZAP with the LLM add-on configured.

--- a/src/main/resources/org/zaproxy/zap/extension/aitrafficanalyst/resources/Messages.properties
+++ b/src/main/resources/org/zaproxy/zap/extension/aitrafficanalyst/resources/Messages.properties
@@ -1,5 +1,5 @@
 aitrafficanalyst.name=AI Traffic Analyst
-aitrafficanalyst.desc=AI-driven traffic analysis using local LLMs.
+aitrafficanalyst.desc=AI-driven traffic analysis using the ZAP LLM add-on.
 aitrafficanalyst.menu.aiAnalyst=AI Analyst
 aitrafficanalyst.menu.analyze=Analyze Request
 aitrafficanalyst.menu.analyzeGet=Analyze GET
@@ -8,11 +8,11 @@ aitrafficanalyst.menu.customAnalysis=Custom Analysis...
 aitrafficanalyst.panel.name=AI Analysis
 aitrafficanalyst.btn.clear=Clear All
 aitrafficanalyst.btn.save=Save Report
-aitrafficanalyst.options.ollamaUrl=Ollama Base URL:
-aitrafficanalyst.options.ollamaUrl.tooltip=e.g. http://localhost:11434/
-aitrafficanalyst.options.modelName=Model Name:
-aitrafficanalyst.options.refresh=Refresh Models
-aitrafficanalyst.options.systemPrompt=System Prompt:
+aitrafficanalyst.options.llmConfig=LLM Configuration:
+aitrafficanalyst.options.llmConfig.desc=This add-on uses the official ZAP LLM add-on. Configure your provider via Tools \u2192 Options \u2192 LLM.
+aitrafficanalyst.options.llmConfig.status.unavailable=\u274C LLM add-on is not available.
+aitrafficanalyst.options.llmConfig.status.notConfigured=\u274C LLM add-on is not configured. Configure it via Tools \u2192 Options \u2192 LLM.
+aitrafficanalyst.options.llmConfig.status.configured=\u2705 LLM add-on is configured.
 aitrafficanalyst.options.role=Role:
 aitrafficanalyst.options.role.prompt=Role Prompt:
 aitrafficanalyst.options.role.add=Add Role
