Polish: align with ZAP dev guidelines
Why: ZAP guidelines require UI strings to be internationalized and encourage consistent, accessible UI + documented functionality.

What: moved remaining user-facing strings into Messages.properties (including dialogs/status/errors) and removed emoji/special arrow characters from UI output; added JLabel labelFor hookups in options panel.

Docs: added JavaHelp content for AI Traffic Analyst options and LLM add-on configuration; fixed helpset metadata for jhindexer.

Repo hygiene: added .gitattributes to normalize line endings (LF by default, CRLF for .bat).

Build: ./gradlew clean test jarZapAddOn (JDK 17)

--- a/src/main/resources/org/zaproxy/zap/extension/aitrafficanalyst/resources/Messages.properties
+++ b/src/main/resources/org/zaproxy/zap/extension/aitrafficanalyst/resources/Messages.properties
@@ -8,11 +8,17 @@ aitrafficanalyst.menu.customAnalysis=Custom Analysis...
 aitrafficanalyst.panel.name=AI Analysis
 aitrafficanalyst.btn.clear=Clear All
 aitrafficanalyst.btn.save=Save Report
+aitrafficanalyst.report.saved=Report saved to {0}
+aitrafficanalyst.report.saved.title=Saved
+aitrafficanalyst.report.saveError=Error saving report: {0}
+aitrafficanalyst.report.saveError.title=Error
+aitrafficanalyst.methodMismatch.title=Method Mismatch
+aitrafficanalyst.methodMismatch.msg=Warning: You selected 'Analyze {0}' but this is a {1} request.\nThe AI might be confused by the missing/extra body data.\n\nDo you want to continue anyway?
 aitrafficanalyst.options.llmConfig=LLM Configuration:
-aitrafficanalyst.options.llmConfig.desc=This add-on uses the official ZAP LLM add-on. Configure your provider via Tools \u2192 Options \u2192 LLM.
-aitrafficanalyst.options.llmConfig.status.unavailable=\u274C LLM add-on is not available.
-aitrafficanalyst.options.llmConfig.status.notConfigured=\u274C LLM add-on is not configured. Configure it via Tools \u2192 Options \u2192 LLM.
-aitrafficanalyst.options.llmConfig.status.configured=\u2705 LLM add-on is configured.
+aitrafficanalyst.options.llmConfig.desc=This add-on uses the official ZAP LLM add-on. Configure your provider via Tools > Options > LLM.
+aitrafficanalyst.options.llmConfig.status.unavailable=The LLM add-on is not available.
+aitrafficanalyst.options.llmConfig.status.notConfigured=The LLM add-on is not configured. Configure it via Tools > Options > LLM.
+aitrafficanalyst.options.llmConfig.status.configured=The LLM add-on is configured.
 aitrafficanalyst.options.role=Role:
 aitrafficanalyst.options.role.prompt=Role Prompt:
 aitrafficanalyst.options.role.add=Add Role
@@ -23,9 +29,20 @@ aitrafficanalyst.options.role.add.duplicate=That role already exists.
 aitrafficanalyst.options.role.delete.title=Delete Role
 aitrafficanalyst.options.role.delete.confirm=Delete this role? This cannot be undone.
 aitrafficanalyst.options.reset=Reset to Defaults
+aitrafficanalyst.options.reset.confirm=Are you sure you want to reset all settings to their original defaults?
+aitrafficanalyst.options.reset.title=Confirm Reset
 aitrafficanalyst.options.modelsLoaded=Models loaded successfully!
 aitrafficanalyst.status.thinking=Thinking...
-aitrafficanalyst.status.sending=\uD83D\uDCE1 Sending live request to capture fresh response...
-aitrafficanalyst.status.querying=\uD83E\uDD16 Thinking... (Querying {0} with live data)...
+aitrafficanalyst.status.sending=Sending live request to capture fresh response...
+aitrafficanalyst.status.querying=Thinking... (Querying {0} with live data)...
 aitrafficanalyst.status.thinking_with_model=Thinking... (Querying {0})...
-aitrafficanalyst.warn.promptTruncated=\u26A0 Prompt truncated to {0} bytes before sending to model.
+aitrafficanalyst.warn.promptTruncated=Prompt truncated to {0} bytes before sending to model.
+
+aitrafficanalyst.llm.unavailable=LLM integration is not available.
+aitrafficanalyst.llm.notConfigured=The LLM add-on is installed but not configured. Configure it via Tools > Options > LLM.
+aitrafficanalyst.llm.notConfiguredWithIssue=The LLM add-on is not configured: {0}
+aitrafficanalyst.llm.missing=The ZAP LLM add-on is not available. Install/enable the LLM add-on and restart ZAP (Manage Add-ons > Marketplace > LLM).
+aitrafficanalyst.llm.missing.detailed=The ZAP LLM add-on is not available. Install/enable the LLM add-on and restart ZAP (Manage Add-ons > Marketplace > LLM). If it is not listed in the Marketplace yet, build it from https://github.com/zaproxy/zap-extensions (addOns/llm) and install the resulting .zap from file.
+
+aitrafficanalyst.error=Error: {0}
+aitrafficanalyst.error.initiating=Error initiating analysis: {0}
